# fermge

./: .gitignore  README.md  example.ipynb  main.py  plotting.py  pyproject.toml
core/: __init__.py  alg_ge.py  alg_gefair.py  alg_gefair_impl.cpp  exp_param.py
data/: __init__.py  adult.py  compas.py  crime.py  dataset.py  dataset_utils.py  dutch_census.py  law_school.py
datasets/: adult.py  compas.py  dataset.py  dataset_utils.py  dutch_census.py  law_school.py
ferm_ge/: alg_gefair.py  alg_rfp_rfn.py  exp.py  exp_param.py  exp_utils.py  task_blc.py
fermge/: alg_rfp_rfn.py  exp.py  exp_utils.py  task_blc.py
fermge/datasets/: __init__.py  adult.py  compas.py  dataset.py  dutch_census.py  law_school.py
